--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -10,8 +10,10 @@ const isActive = href === Astro.url.pathname.replace(/\/$/, '');
 </a>
 <style>
 	a {
-		display: inline-block;
+		display: inline-flex;
 		text-decoration: none;
+    align-items: center;
+    gap: 4px;
 	}
 	a.active {
 		font-weight: bolder;
