--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,10 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
+import { SITE_TITLE, SITE_DESCRIPTION, HOMEPAGE_URL } from '../config';
 import Body from '../components/Body.astro'
+import Content from '../components/Content.astro'
+import { IoArrowForward } from 'react-icons/io5/index.js'
 ---
 
 <!DOCTYPE html>
@@ -14,7 +16,18 @@ import Body from '../components/Body.astro'
 	<Body>
 		<Header title={SITE_TITLE} />
 		<main class='pt-[56px]'>
-
+      <Content>
+        <section>
+          <p class="mb-8 indent-4">
+            Lorem ipsum
+            <a
+              class="inline-flex items-center gap-1 indent-1 text-orange-500"
+              href={HOMEPAGE_URL}
+              >Learn more about me <IoArrowForward className="inline" />
+            </a>
+          </p>
+        </section>
+      </Content>
 		</main>
 		<Footer />
 	</Body>
