--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import Masthead from '../components/Masthead.astro';
 import { SITE_TITLE, SITE_DESCRIPTION, HOMEPAGE_URL } from '../config';
 import Body from '../components/Body.astro'
 import Content from '../components/Content.astro'
@@ -16,6 +17,7 @@ import { IoArrowForward } from 'react-icons/io5/index.js'
 	<Body>
 		<Header title={SITE_TITLE} />
 		<main class='pt-[56px]'>
+      <Masthead />
       <Content>
         <section>
           <p class="mb-8 indent-4">
