--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,14 @@ import Masthead from '../components/Masthead.astro';
 import { SITE_TITLE, SITE_DESCRIPTION, HOMEPAGE_URL } from '../config';
 import Body from '../components/Body.astro'
 import Content from '../components/Content.astro'
+import { Image } from '@astrojs/image/components'
 import { IoArrowForward } from 'react-icons/io5/index.js'
+
+const posts = (await Astro.glob('./posts/*.md')).sort(
+  (a: any, b: any) =>
+    new Date(b.frontmatter.createdAt).valueOf() -
+    new Date(a.frontmatter.createdAt).valueOf()
+)
 ---
 
 <!DOCTYPE html>
@@ -28,6 +35,35 @@ import { IoArrowForward } from 'react-icons/io5/index.js'
               >Learn more about me <IoArrowForward className="inline" />
             </a>
           </p>
+        </section>
+        <section>
+         <ul class="grid grid-cols-1 md:grid-cols-2 gap-4">
+          {
+             posts.map(post => {
+                 return (
+                  <li class="text-center mb-4">
+                    <a href={post.url}>
+                      <Image
+                      class="border border-slate-300 dark:border-zinc-700 rounded-xl"
+                      src={post.frontmatter.heroImage}
+                      width={720 * 2}
+                      aspectRatio={2.0}
+                      alt="Thumbnail"
+                    />
+                    <div class="mt-3 text-xl font-bold">
+                     {post.frontmatter.title} 
+                    </div>
+                    {post.frontmatter.description && (
+                      <div class="opacity-70">
+                        {post.frontmatter.description}
+                      </div>
+                    )}
+                    </a>
+                  </li>
+                 )
+               })
+            }
+         </ul>
         </section>
       </Content>
 		</main>
